# VGDSquared

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  env_schema.properties  package-lock.json  package.json
forum/: forum.css  forum.html
migrations/: 0001_users.down.sql  0001_users.up.sql  0100_sessions.up.sql  1001_account.down.sql  1001_account.up.sql  1002_auth.down.sql  1002_auth.up.sql  1003_category.down.sql  1003_category.up.sql  1004_thread.down.sql  1004_thread.up.sql  1005_post.down.sql  1005_post.up.sql  README.md
public/: app.js  index.html  style.css  why.html
public/3dModeling/: threeDModeling.css  threeDModeling.html  threeDModeling.js
src/: db.rs  main.rs
src/api/: auth.rs  extractor.rs  mod.rs  role.rs  utils.rs
src/api/auth/: google.rs  microsoft.rs  mod.rs
src/api/thread/: mod.rs
