[package]
name = "lahaina_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Meat of the stack
poem-openapi = { version = "3.0.5", features = ["swagger-ui", "openapi-explorer", "time"] }
poem = { version = "1.3.58", features = ["static-files"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "time"] }

# Debugging
color-eyre = "0.6.2"
tracing = "0.1.37"

# Additional crates
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.30", features = ["serde", "large-dates", "local-offset"] }
const_format = "0.2.32"
dotenv_codegen = "0.15.0"
serde_qs = "0.12.0"
reqwest = "0.11.22"
structmap-derive = "0.1.6"
once_cell = "1.18.0"
jwt = "0.16.0"
poem-grants = "1.0.0-beta.3"
tracing-subscriber = "0.3.17"
