[package]
name = "lahaina_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }

# Meat of the stack
poem-openapi = { version = "3.0.5", features = ["swagger-ui", "openapi-explorer", "time"] }
poem = { version = "1.3.58", features = ["static-files"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "time"] }

# Debugging
color-eyre = "0.6.2"
tracing = "0.1.37"

# Serde
serde_json = "1.0.107"
serde_qs = "0.12.0"

# Utils
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
once_cell = "1.18.0"
const_format = "0.2.32"

# Additional crates
poem-grants = "1.0.0-beta.3"
time = { version = "0.3.30", features = ["serde", "large-dates", "local-offset"] }
reqwest = "0.11.22"
tracing-subscriber = "0.3.17"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
